# rx8_gauge

./: .gitignore  Cargo.toml  run.sh
src/: config.rs  data.rs  main.rs
src/display/: layout.rs
src/obd/: mock.rs  mod.rs  real.rs
src/platform/: fb_display.rs  mod.rs  sim_display.rs
