[package]
name = "rx8_gauge"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = { version = "0.7.0", optional = true }
framebuffer = { version = "0.3.1", optional = true }
profont = "0.7.0"

[features]
pi = ["framebuffer"]
simulator = ["embedded-graphics-simulator"]
